QtGui/gen_qevent.h

typedef struct QEnterEvent QEnterEvent;
typedef struct QEventPoint QEventPoint;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointerEvent QPointerEvent;
typedef struct QPointingDevice QPointingDevice;
typedef struct QSinglePointEvent QSinglePointEvent;
QInputEvent* QInputEvent_new(int type, QInputDevice* m_dev);
QInputEvent* QInputEvent_new2(int type, QInputDevice* m_dev, int modifiers);
QInputEvent* QInputEvent_clone(const QInputEvent* self);
QInputDevice* QInputEvent_device(const QInputEvent* self);
int QInputEvent_deviceType(const QInputEvent* self);
int QInputEvent_modifiers(const QInputEvent* self);
void QInputEvent_setModifiers(QInputEvent* self, int modifiers);
unsigned long long QInputEvent_timestamp(const QInputEvent* self);
void QInputEvent_setTimestamp(QInputEvent* self, unsigned long long timestamp);
bool QInputEvent_override_virtual_clone(void* self, intptr_t slot);
QInputEvent* QInputEvent_virtualbase_clone(const void* self);
bool QInputEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QInputEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QInputEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QInputEvent_virtualbase_setAccepted(void* self, bool accepted);
void QInputEvent_delete(QInputEvent* self);
QPointerEvent* QPointerEvent_new(int type, QPointingDevice* dev);
QPointerEvent* QPointerEvent_new2(int type, QPointingDevice* dev, int modifiers);
QPointerEvent* QPointerEvent_new3(int type, QPointingDevice* dev, int modifiers, struct miqt_array /* of QEventPoint* */  points);
QPointerEvent* QPointerEvent_clone(const QPointerEvent* self);
QPointingDevice* QPointerEvent_pointingDevice(const QPointerEvent* self);
int QPointerEvent_pointerType(const QPointerEvent* self);
void QPointerEvent_setTimestamp(QPointerEvent* self, unsigned long long timestamp);
ptrdiff_t QPointerEvent_pointCount(const QPointerEvent* self);
QEventPoint* QPointerEvent_point(QPointerEvent* self, ptrdiff_t i);
struct miqt_array /* of QEventPoint* */  QPointerEvent_points(const QPointerEvent* self);
QEventPoint* QPointerEvent_pointById(QPointerEvent* self, int id);
bool QPointerEvent_allPointsGrabbed(const QPointerEvent* self);
bool QPointerEvent_isBeginEvent(const QPointerEvent* self);
bool QPointerEvent_isUpdateEvent(const QPointerEvent* self);
bool QPointerEvent_isEndEvent(const QPointerEvent* self);
bool QPointerEvent_allPointsAccepted(const QPointerEvent* self);
void QPointerEvent_setAccepted(QPointerEvent* self, bool accepted);
QObject* QPointerEvent_exclusiveGrabber(const QPointerEvent* self, QEventPoint* point);
void QPointerEvent_setExclusiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* exclusiveGrabber);
void QPointerEvent_clearPassiveGrabbers(QPointerEvent* self, QEventPoint* point);
bool QPointerEvent_addPassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
bool QPointerEvent_removePassiveGrabber(QPointerEvent* self, QEventPoint* point, QObject* grabber);
bool QPointerEvent_override_virtual_clone(void* self, intptr_t slot);
QPointerEvent* QPointerEvent_virtualbase_clone(const void* self);
bool QPointerEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QPointerEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QPointerEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QPointerEvent_virtualbase_isBeginEvent(const void* self);
bool QPointerEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QPointerEvent_virtualbase_isUpdateEvent(const void* self);
bool QPointerEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QPointerEvent_virtualbase_isEndEvent(const void* self);
bool QPointerEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QPointerEvent_virtualbase_setAccepted(void* self, bool accepted);
void QPointerEvent_delete(QPointerEvent* self);
QSinglePointEvent* QSinglePointEvent_clone(const QSinglePointEvent* self);
int QSinglePointEvent_button(const QSinglePointEvent* self);
int QSinglePointEvent_buttons(const QSinglePointEvent* self);
QPointF* QSinglePointEvent_position(const QSinglePointEvent* self);
QPointF* QSinglePointEvent_scenePosition(const QSinglePointEvent* self);
QPointF* QSinglePointEvent_globalPosition(const QSinglePointEvent* self);
bool QSinglePointEvent_isBeginEvent(const QSinglePointEvent* self);
bool QSinglePointEvent_isUpdateEvent(const QSinglePointEvent* self);
bool QSinglePointEvent_isEndEvent(const QSinglePointEvent* self);
QObject* QSinglePointEvent_exclusivePointGrabber(const QSinglePointEvent* self);
void QSinglePointEvent_setExclusivePointGrabber(QSinglePointEvent* self, QObject* exclusiveGrabber);
void QSinglePointEvent_delete(QSinglePointEvent* self);
QEnterEvent* QEnterEvent_new(QPointF* localPos, QPointF* scenePos, QPointF* globalPos);
QEnterEvent* QEnterEvent_new2(QPointF* localPos, QPointF* scenePos, QPointF* globalPos, QPointingDevice* device);
QEnterEvent* QEnterEvent_clone(const QEnterEvent* self);
QPoint* QEnterEvent_pos(const QEnterEvent* self);
QPoint* QEnterEvent_globalPos(const QEnterEvent* self);
int QEnterEvent_x(const QEnterEvent* self);
int QEnterEvent_y(const QEnterEvent* self);
int QEnterEvent_globalX(const QEnterEvent* self);
int QEnterEvent_globalY(const QEnterEvent* self);
QPointF* QEnterEvent_localPos(const QEnterEvent* self);
QPointF* QEnterEvent_windowPos(const QEnterEvent* self);
QPointF* QEnterEvent_screenPos(const QEnterEvent* self);
bool QEnterEvent_override_virtual_clone(void* self, intptr_t slot);
QEnterEvent* QEnterEvent_virtualbase_clone(const void* self);
bool QEnterEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QEnterEvent_virtualbase_isBeginEvent(const void* self);
bool QEnterEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QEnterEvent_virtualbase_isUpdateEvent(const void* self);
bool QEnterEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QEnterEvent_virtualbase_isEndEvent(const void* self);
bool QEnterEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QEnterEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QEnterEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QEnterEvent_virtualbase_setAccepted(void* self, bool accepted);
void QEnterEvent_delete(QEnterEvent* self);
QMouseEvent* QMouseEvent_new(int type, QPointF* localPos, int button, int buttons, int modifiers);
QMouseEvent* QMouseEvent_new2(int type, QPointF* localPos, QPointF* globalPos, int button, int buttons, int modifiers);
QMouseEvent* QMouseEvent_new3(int type, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, int button, int buttons, int modifiers);
QMouseEvent* QMouseEvent_new4(int type, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, int button, int buttons, int modifiers, int source);
QMouseEvent* QMouseEvent_new5(int type, QPointF* localPos, int button, int buttons, int modifiers, QPointingDevice* device);
QMouseEvent* QMouseEvent_new6(int type, QPointF* localPos, QPointF* globalPos, int button, int buttons, int modifiers, QPointingDevice* device);
QMouseEvent* QMouseEvent_new7(int type, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, int button, int buttons, int modifiers, QPointingDevice* device);
QMouseEvent* QMouseEvent_new8(int type, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, int button, int buttons, int modifiers, int source, QPointingDevice* device);
QMouseEvent* QMouseEvent_clone(const QMouseEvent* self);
QPoint* QMouseEvent_pos(const QMouseEvent* self);
QPoint* QMouseEvent_globalPos(const QMouseEvent* self);
int QMouseEvent_x(const QMouseEvent* self);
int QMouseEvent_y(const QMouseEvent* self);
int QMouseEvent_globalX(const QMouseEvent* self);
int QMouseEvent_globalY(const QMouseEvent* self);