qt6/gen_qevent.nim


proc fcQInputEvent_new(typeVal: cint, m_dev: pointer): ptr cQInputEvent {.importc: "QInputEvent_new".}
proc fcQInputEvent_new2(typeVal: cint, m_dev: pointer, modifiers: cint): ptr cQInputEvent {.importc: "QInputEvent_new2".}
proc fcQInputEvent_clone(self: pointer, ): pointer {.importc: "QInputEvent_clone".}
proc fcQInputEvent_device(self: pointer, ): pointer {.importc: "QInputEvent_device".}
proc fcQInputEvent_deviceType(self: pointer, ): cint {.importc: "QInputEvent_deviceType".}
proc fcQInputEvent_modifiers(self: pointer, ): cint {.importc: "QInputEvent_modifiers".}
proc fcQInputEvent_setModifiers(self: pointer, modifiers: cint): void {.importc: "QInputEvent_setModifiers".}
proc fcQInputEvent_timestamp(self: pointer, ): culonglong {.importc: "QInputEvent_timestamp".}
proc fcQInputEvent_setTimestamp(self: pointer, timestamp: culonglong): void {.importc: "QInputEvent_setTimestamp".}
proc fQInputEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QInputEvent_virtualbase_clone".}
proc fcQInputEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QInputEvent_override_virtual_clone".}
proc fQInputEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QInputEvent_virtualbase_setTimestamp".}
proc fcQInputEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QInputEvent_override_virtual_setTimestamp".}
proc fQInputEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QInputEvent_virtualbase_setAccepted".}
proc fcQInputEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QInputEvent_override_virtual_setAccepted".}
proc fcQInputEvent_delete(self: pointer) {.importc: "QInputEvent_delete".}
proc fcQPointerEvent_new(typeVal: cint, dev: pointer): ptr cQPointerEvent {.importc: "QPointerEvent_new".}
proc fcQPointerEvent_new2(typeVal: cint, dev: pointer, modifiers: cint): ptr cQPointerEvent {.importc: "QPointerEvent_new2".}
proc fcQPointerEvent_new3(typeVal: cint, dev: pointer, modifiers: cint, points: struct_miqt_array): ptr cQPointerEvent {.importc: "QPointerEvent_new3".}
proc fcQPointerEvent_clone(self: pointer, ): pointer {.importc: "QPointerEvent_clone".}
proc fcQPointerEvent_pointingDevice(self: pointer, ): pointer {.importc: "QPointerEvent_pointingDevice".}
proc fcQPointerEvent_pointerType(self: pointer, ): cint {.importc: "QPointerEvent_pointerType".}
proc fcQPointerEvent_setTimestamp(self: pointer, timestamp: culonglong): void {.importc: "QPointerEvent_setTimestamp".}
proc fcQPointerEvent_pointCount(self: pointer, ): int64 {.importc: "QPointerEvent_pointCount".}
proc fcQPointerEvent_point(self: pointer, i: int64): pointer {.importc: "QPointerEvent_point".}
proc fcQPointerEvent_points(self: pointer, ): struct_miqt_array {.importc: "QPointerEvent_points".}
proc fcQPointerEvent_pointById(self: pointer, id: cint): pointer {.importc: "QPointerEvent_pointById".}
proc fcQPointerEvent_allPointsGrabbed(self: pointer, ): bool {.importc: "QPointerEvent_allPointsGrabbed".}
proc fcQPointerEvent_isBeginEvent(self: pointer, ): bool {.importc: "QPointerEvent_isBeginEvent".}
proc fcQPointerEvent_isUpdateEvent(self: pointer, ): bool {.importc: "QPointerEvent_isUpdateEvent".}
proc fcQPointerEvent_isEndEvent(self: pointer, ): bool {.importc: "QPointerEvent_isEndEvent".}
proc fcQPointerEvent_allPointsAccepted(self: pointer, ): bool {.importc: "QPointerEvent_allPointsAccepted".}
proc fcQPointerEvent_setAccepted(self: pointer, accepted: bool): void {.importc: "QPointerEvent_setAccepted".}
proc fcQPointerEvent_exclusiveGrabber(self: pointer, point: pointer): pointer {.importc: "QPointerEvent_exclusiveGrabber".}
proc fcQPointerEvent_setExclusiveGrabber(self: pointer, point: pointer, exclusiveGrabber: pointer): void {.importc: "QPointerEvent_setExclusiveGrabber".}
proc fcQPointerEvent_clearPassiveGrabbers(self: pointer, point: pointer): void {.importc: "QPointerEvent_clearPassiveGrabbers".}
proc fcQPointerEvent_addPassiveGrabber(self: pointer, point: pointer, grabber: pointer): bool {.importc: "QPointerEvent_addPassiveGrabber".}
proc fcQPointerEvent_removePassiveGrabber(self: pointer, point: pointer, grabber: pointer): bool {.importc: "QPointerEvent_removePassiveGrabber".}
proc fQPointerEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QPointerEvent_virtualbase_clone".}
proc fcQPointerEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QPointerEvent_override_virtual_clone".}
proc fQPointerEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QPointerEvent_virtualbase_setTimestamp".}
proc fcQPointerEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QPointerEvent_override_virtual_setTimestamp".}
proc fQPointerEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QPointerEvent_virtualbase_isBeginEvent".}
proc fcQPointerEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QPointerEvent_override_virtual_isBeginEvent".}
proc fQPointerEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QPointerEvent_virtualbase_isUpdateEvent".}
proc fcQPointerEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QPointerEvent_override_virtual_isUpdateEvent".}
proc fQPointerEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QPointerEvent_virtualbase_isEndEvent".}
proc fcQPointerEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QPointerEvent_override_virtual_isEndEvent".}
proc fQPointerEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QPointerEvent_virtualbase_setAccepted".}
proc fcQPointerEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QPointerEvent_override_virtual_setAccepted".}
proc fcQPointerEvent_delete(self: pointer) {.importc: "QPointerEvent_delete".}
proc fcQSinglePointEvent_clone(self: pointer, ): pointer {.importc: "QSinglePointEvent_clone".}
proc fcQSinglePointEvent_button(self: pointer, ): cint {.importc: "QSinglePointEvent_button".}
proc fcQSinglePointEvent_buttons(self: pointer, ): cint {.importc: "QSinglePointEvent_buttons".}
proc fcQSinglePointEvent_position(self: pointer, ): pointer {.importc: "QSinglePointEvent_position".}
proc fcQSinglePointEvent_scenePosition(self: pointer, ): pointer {.importc: "QSinglePointEvent_scenePosition".}
proc fcQSinglePointEvent_globalPosition(self: pointer, ): pointer {.importc: "QSinglePointEvent_globalPosition".}
proc fcQSinglePointEvent_isBeginEvent(self: pointer, ): bool {.importc: "QSinglePointEvent_isBeginEvent".}
proc fcQSinglePointEvent_isUpdateEvent(self: pointer, ): bool {.importc: "QSinglePointEvent_isUpdateEvent".}
proc fcQSinglePointEvent_isEndEvent(self: pointer, ): bool {.importc: "QSinglePointEvent_isEndEvent".}
proc fcQSinglePointEvent_exclusivePointGrabber(self: pointer, ): pointer {.importc: "QSinglePointEvent_exclusivePointGrabber".}
proc fcQSinglePointEvent_setExclusivePointGrabber(self: pointer, exclusiveGrabber: pointer): void {.importc: "QSinglePointEvent_setExclusivePointGrabber".}
proc fcQSinglePointEvent_delete(self: pointer) {.importc: "QSinglePointEvent_delete".}
proc fcQEnterEvent_new(localPos: pointer, scenePos: pointer, globalPos: pointer): ptr cQEnterEvent {.importc: "QEnterEvent_new".}
proc fcQEnterEvent_new2(localPos: pointer, scenePos: pointer, globalPos: pointer, device: pointer): ptr cQEnterEvent {.importc: "QEnterEvent_new2".}
proc fcQEnterEvent_clone(self: pointer, ): pointer {.importc: "QEnterEvent_clone".}
proc fcQEnterEvent_pos(self: pointer, ): pointer {.importc: "QEnterEvent_pos".}
proc fcQEnterEvent_globalPos(self: pointer, ): pointer {.importc: "QEnterEvent_globalPos".}
proc fcQEnterEvent_x(self: pointer, ): cint {.importc: "QEnterEvent_x".}
proc fcQEnterEvent_y(self: pointer, ): cint {.importc: "QEnterEvent_y".}
proc fcQEnterEvent_globalX(self: pointer, ): cint {.importc: "QEnterEvent_globalX".}
proc fcQEnterEvent_globalY(self: pointer, ): cint {.importc: "QEnterEvent_globalY".}
proc fcQEnterEvent_localPos(self: pointer, ): pointer {.importc: "QEnterEvent_localPos".}
proc fcQEnterEvent_windowPos(self: pointer, ): pointer {.importc: "QEnterEvent_windowPos".}
proc fcQEnterEvent_screenPos(self: pointer, ): pointer {.importc: "QEnterEvent_screenPos".}
proc fQEnterEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QEnterEvent_virtualbase_clone".}
proc fcQEnterEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QEnterEvent_override_virtual_clone".}
proc fQEnterEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QEnterEvent_virtualbase_isBeginEvent".}
proc fcQEnterEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QEnterEvent_override_virtual_isBeginEvent".}
proc fQEnterEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QEnterEvent_virtualbase_isUpdateEvent".}
proc fcQEnterEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QEnterEvent_override_virtual_isUpdateEvent".}
proc fQEnterEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QEnterEvent_virtualbase_isEndEvent".}
proc fcQEnterEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QEnterEvent_override_virtual_isEndEvent".}
proc fQEnterEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QEnterEvent_virtualbase_setTimestamp".}
proc fcQEnterEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QEnterEvent_override_virtual_setTimestamp".}
proc fQEnterEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QEnterEvent_virtualbase_setAccepted".}
proc fcQEnterEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QEnterEvent_override_virtual_setAccepted".}
proc fcQEnterEvent_delete(self: pointer) {.importc: "QEnterEvent_delete".}
proc fcQMouseEvent_new(typeVal: cint, localPos: pointer, button: cint, buttons: cint, modifiers: cint): ptr cQMouseEvent {.importc: "QMouseEvent_new".}
proc fcQMouseEvent_new2(typeVal: cint, localPos: pointer, globalPos: pointer, button: cint, buttons: cint, modifiers: cint): ptr cQMouseEvent {.importc: "QMouseEvent_new2".}
proc fcQMouseEvent_new3(typeVal: cint, localPos: pointer, scenePos: pointer, globalPos: pointer, button: cint, buttons: cint, modifiers: cint): ptr cQMouseEvent {.importc: "QMouseEvent_new3".}
proc fcQMouseEvent_new4(typeVal: cint, localPos: pointer, scenePos: pointer, globalPos: pointer, button: cint, buttons: cint, modifiers: cint, source: cint): ptr cQMouseEvent {.importc: "QMouseEvent_new4".}
proc fcQMouseEvent_new5(typeVal: cint, localPos: pointer, button: cint, buttons: cint, modifiers: cint, device: pointer): ptr cQMouseEvent {.importc: "QMouseEvent_new5".}
proc fcQMouseEvent_new6(typeVal: cint, localPos: pointer, globalPos: pointer, button: cint, buttons: cint, modifiers: cint, device: pointer): ptr cQMouseEvent {.importc: "QMouseEvent_new6".}
proc fcQMouseEvent_new7(typeVal: cint, localPos: pointer, scenePos: pointer, globalPos: pointer, button: cint, buttons: cint, modifiers: cint, device: pointer): ptr cQMouseEvent {.importc: "QMouseEvent_new7".}
proc fcQMouseEvent_new8(typeVal: cint, localPos: pointer, scenePos: pointer, globalPos: pointer, button: cint, buttons: cint, modifiers: cint, source: cint, device: pointer): ptr cQMouseEvent {.importc: "QMouseEvent_new8".}
proc fcQMouseEvent_clone(self: pointer, ): pointer {.importc: "QMouseEvent_clone".}
proc fcQMouseEvent_pos(self: pointer, ): pointer {.importc: "QMouseEvent_pos".}
proc fcQMouseEvent_globalPos(self: pointer, ): pointer {.importc: "QMouseEvent_globalPos".}
proc fcQMouseEvent_x(self: pointer, ): cint {.importc: "QMouseEvent_x".}
proc fcQMouseEvent_y(self: pointer, ): cint {.importc: "QMouseEvent_y".}
proc fcQMouseEvent_globalX(self: pointer, ): cint {.importc: "QMouseEvent_globalX".}
proc fcQMouseEvent_globalY(self: pointer, ): cint {.importc: "QMouseEvent_globalY".}
